# WaterQualityClassifier

./: README.md  experimento1_baseline.py  experimento2_refino_de_hiperparametros.py  main.py  pyproject.toml
