[project]
name = "waterqualityclassifier"
version = "0.1.0"
description = ""
authors = [
    {name = "VictorLuizAlmeida",email = "victor.luiz.almeida@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=1.24.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "catboost (>=1.2.7,<2.0.0)",
    "mlflow (>=2.19.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
